--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-SQLAlchemy==2.0.23
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+SQLAlchemy==2.0.36
 pydantic==2.11.9
 pydantic-settings==2.10.1
 python-dotenv==1.1.1
 
 passlib==1.7.4
-bcrypt==4.1.2
+bcrypt==4.2.0
 cffi==1.17.1
 
 email-validator==2.2.0
@@ -15,8 +15,8 @@ email-validator==2.2.0
 python-jose[cryptography]==3.3.0
 
 # Para envio de emails via Brevo
-requests==2.31.0
+requests==2.32.3
 
-# PostgreSQL (adicionar estas linhas)
-psycopg2-binary==2.9.9
-gunicorn==21.2.0
+# PostgreSQL
+psycopg2-binary==2.9.10
+gunicorn==23.0.0
